# Projeto_Streamlit_Cadastro_Clientes

./: Cadastro.py  clientes.csv  pyproject.toml  readme.md  requirements.txt
pages/: 🔎Consulta.py
