[project]
name = "projeto-prático"
version = "0.1.0"
description = ""
authors = [
    {name = "Taíta",email = "taytaramos@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
